[package]
name = "ghost-avalanche-attack"
version = "0.1.0"
authors = ["Joachim Neu <jneu@stanford.edu>"]
edition = "2018"
publish = false


[dependencies]
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
ed25519-dalek = "1.0.1"
base58 = "0.2.0"


[[bin]]
name = "main"
path = "src/main.rs"
